--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 id="animated-marker"
                 type="pattern"
                 preset="custom"
-                url="assets/pattern-y large .patt.patt"
+                url="assets/pattern-y large .patt"
                 raycaster="objects: .clickable"
                 emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
