--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 id="markerA"
             >
                 <a-image
-                    src="assets/Trust.png"
+                    src="assets/trust.png"
                     scale="1 1 2"
                     class="clickable"
                     rotation="-90 0 0"
